fix contact us display on small devices

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -555,3 +555,9 @@ h2 {
     }
   }
 }
+
+.sm-text-align-center {
+  @media (max-width: 767.98px) {
+    text-align: center;
+  }
+}
